--- a/index.html
+++ b/index.html
@@ -921,3 +921,10 @@
                         <li>Evolui constantemente (como no Oracle)</li>
                         <li>Elimina consultas sem sentido antes mesmo de executar</li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
+
